syntax = "proto3";

option go_package = "./pb";

import "google/protobuf/timestamp.proto";
import "image_message.proto";

message Room {
  uint64 id = 1;
  string title = 2;
  string address = 3;
  uint64 price = 4;
  uint32 area = 5;
  bool is_available = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  repeated Image images = 9;
}