syntax = "proto3";

option go_package = "./pb";

import "room_message.proto";

message CreateRoomRequest {
    Room room = 1;
}

message CreateRoomResponse {
    uint64 id = 1;
}

service RoomService {
    rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse) {};
}
